# Wolf3D

./: .gitignore  CMakeLists.txt  Makefile  author  map  map_big  map_middle  map_small
Maps/: map_big  map_middle  map_small
includes/: wolf3d.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_clear_list.c  ft_clear_string_array.c  ft_free_arr.c  ft_is_uppercase.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_iswhitespaces.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_size_of_lst.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+27 more)
src/: calculate.c  calculate_distance.c  changing_fullscreen.c  check_events.c  colorize.c  doors.c  draw.c  errors.c  exit.c  free.c  init.c  init_hud_and_player.c  init_sdl_ttf.c  init_weapons.c  input.c  keys.c  load.c  load_hud_menu_walls.c  load_weapon.c  map_processing.c  menu.c  move.c  moves.c  parse_map.c  raycasting.c  stats.c  stats_showing.c  stats_weapon.c  timers_game_loop.c  transform.c  validation.c  vert_hor_calc.c  weapons.c  wolf3d.c
